--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <ul class="purr__list">
+        <li class="purr__item">
+          <p class="purr-item__text">Dedicated Care for Every Purrsonality</p>
+          <h3 class="purr-item__title">Purr Care</h3>
+          <p class="purr-item__bottom-text">
+            Experience top-notch feline care with our Purr Care services. From
+            grooming to playtime, we provide personalized attention to ensure
+            your cat's happiness and well-being at NekoInn.
+          </p>
+          button.purr
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
