--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             grooming to playtime, we provide personalized attention to ensure
             your cat's happiness and well-being at NekoInn.
           </p>
-          button.purr
+          <button class="purr-item__btn">BOOK NOW</button>
         </li>
       </ul>
     </section>
