--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section>
       <ul class="purr__list">
-        <li class="purr__item">
+        <li class="purr__item purr-pink">
           <p class="purr-item__text">Dedicated Care for Every Purrsonality</p>
           <h3 class="purr-item__title">Purr Care</h3>
           <p class="purr-item__bottom-text">
