--- a/index.html
+++ b/index.html
@@ -19,6 +19,36 @@
           </p>
           <button class="purr-item__btn">BOOK NOW</button>
         </li>
+        <li class="purr__item purr-black">
+          <img src="./Mask group (19).png" alt="" class="purr-item__img" />
+          <h3 class="grooming-item__title">Grooming Spa:</h3>
+          <p class="grooming-item__text">
+            Indulge your cat in a pampering experience at our Grooming Spa. Our
+            skilled groomers provide gentle care and attention, from luxurious
+            baths to expert grooming sessions, leaving your cat looking and
+            feeling their best.
+          </p>
+        </li>
+        <li class="purr__item purr-black">
+          <img src="./Mask group (20).png" alt="" class="purr-item__img" />
+          <h3 class="grooming-item__title">Grooming Spa:</h3>
+          <p class="grooming-item__text">
+            Indulge your cat in a pampering experience at our Grooming Spa. Our
+            skilled groomers provide gentle care and attention, from luxurious
+            baths to expert grooming sessions, leaving your cat looking and
+            feeling their best.
+          </p>
+        </li>
+        <li class="purr__item purr-black">
+          <img src="./Mask group (21).png" alt="" class="purr-item__img" />
+          <h3 class="grooming-item__title">Grooming Spa:</h3>
+          <p class="grooming-item__text">
+            Indulge your cat in a pampering experience at our Grooming Spa. Our
+            skilled groomers provide gentle care and attention, from luxurious
+            baths to expert grooming sessions, leaving your cat looking and
+            feeling their best.
+          </p>
+        </li>
       </ul>
     </section>
   </body>
