--- a/index.html
+++ b/index.html
@@ -5,6 +5,220 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header_wrapper">
+          <div class="header-item">
+            <img
+              src="./Photos/Header_logo.svg"
+              alt=""
+              class="header_wrapper-img"
+            />
+          </div>
+          <ul class="header_wrapper-center">
+            <li class="header_wrapper_center-item">
+              <a href="#" class="header_wrapper_center-link">About Us</a>
+            </li>
+            <li class="header_wrapper_center-item">
+              <a href="#" class="header_wrapper_center-link">Our Rooms</a>
+            </li>
+            <li class="header_wrapper_center-item">
+              <a href="#" class="header_wrapper_center-link">Purr Care</a>
+            </li>
+            <li class="header_wrapper_center-item">
+              <a href="#" class="header_wrapper_center-link">Testimonial</a>
+            </li>
+          </ul>
+          <div class="header_wrapper-left">
+            <div class="header_wrapper_left-box">
+              <div class="header_wrapper_left_box-fist">
+                <img
+                  src="./Photos/mon.svg"
+                  alt=""
+                  class="header_wrapper_left_box-moon"
+                />
+              </div>
+              <div class="header_wrapper_left_box-second">
+                <img
+                  src="/Photos/sun.svg"
+                  alt=""
+                  class="header_wrapper_left_box-sun"
+                />
+              </div>
+            </div>
+            <button class="block-btn">BOOK NOW</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container">
+        <section class="Stars">
+          <div class="stars_wrapper">
+            <div class="stars_wrapper-item">
+              <p class="stars_wrapper_item-title">
+                Where Feline Comfort Comes First
+              </p>
+              <p class="stars_wrapper_item-big">Your 5 Stars Purr Inn</p>
+              <p class="stars_wrapepr_item-mini">
+                At NekoInn, we understand that your beloved feline companion
+                deserves b the best care, even when you can't be there. That's
+                why we've created a haven designed specifically for cats, where
+                every whisker is cherished and every purr is celebrated. From
+                cozy accommodations to personalized attention, we strive to
+                provide a nurturing environment where your cat can relax, play,
+                and thrive while you're away. Welcome to NekoInn, where your
+                cat's comfort and happiness are our top priorities.
+              </p>
+              <button class="block-btn">BOOK A PURR-SUITE</button>
+              <div class="start_box-cat">
+                <div class="start_box_cat-text">
+                  <p class="start_box_cat-title">WATCH NOW</p>
+                  <p class="start_box_cat-mini">Introducing The NekoInn</p>
+                </div>
+                <div class="start_box_cat-media">
+                  <img src="/Photos/media.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="stars_wrapper-left">
+              <img
+                src="/Photos/cat_3.png"
+                alt=""
+                class="stars_wrapepr_left-bg"
+              />
+              <div class="start_box_left-avatars">
+                <img src="/Photos/1.png" alt="" class="start_box_left-fisrt" />
+                <img src="/Photos/2.png" alt="" class="start_box_left-second" />
+                <img src="/Photos/3.png" alt="" class="start_box_left-thirs" />
+                <img src="/Photos/4.png" alt="" class="start_box_left-four" />
+              </div>
+            </div>
+          </div>
+          <div class="start_wrapepr-bottom">
+            <div class="stars_wrapper_bottom-box">
+              <div class="stars_wrapepr_bottom-first">
+                <div class="stars_wrapepr_bottom-location">
+                  <img
+                    src="./Photos/location.svg"
+                    alt=""
+                    class="stars_wrapper_bottom-img"
+                  />
+                </div>
+                <p class="start_wrapepr_bottom-text">
+                  123 Meow Avenue. <br />
+                  Kittyville, CA 90210 United States
+                </p>
+              </div>
+              <div class="stars_wrapper_bottom-second">
+                <div class="stars_wrapper_bottom_second_first-box">
+                  <div class="stars_wrapper_bottom_second-box">
+                    <img
+                      src="/Photos/phone.svg"
+                      alt=""
+                      class="stars_wrapper_bottom_second_box-img"
+                    />
+                  </div>
+                  <p class="stars_wrapper_bottom_second-text">(555) 555-5555</p>
+                </div>
+                <div class="stars_wrapper_bottom_second_first-box">
+                  <div class="stars_wrapper_bottom_second-box">
+                    <img
+                      src="/Photos/email.svg"
+                      alt=""
+                      class="stars_wrapper_bottom_second_box-img"
+                    />
+                  </div>
+                  <p class="stars_wrapper_bottom_second-text">
+                    info@neko-inn.com
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="Rooms">
+          <div class="rooms_wrapper">
+            <div class="rooms_wrapper-item">
+              <img
+                src="./Photos/cat_rooms.png"
+                alt=""
+                class="rooms_wrapper_item-bg"
+              />
+            </div>
+            <div class="rooms_wrapper_item-left">
+              <div class="rooms_wrapepr_item_left-box">
+                <p class="rooms_wrapper_item-title">
+                  perfectly Tailored for Your Feline Friend
+                </p>
+                <p class="rooms_wrapper_item-big">Our Rooms</p>
+                <div class="rooms_wrapepr_item_left-big">
+                  <div class="rooms_wrapper_item-left_big-img">
+                    <img
+                      src="./Photos/up_arrow.svg"
+                      alt=""
+                      class="romms_wrapper_item-img"
+                    />
+                  </div>
+                  <div class="rooms_wrapper_item_text-box">
+                    <p class="rooms_wrapepr_item-title">
+                      Cozy Corners: Where Comfort Meets Contentment
+                    </p>
+                    <p class="rooms_wrapper_item-mini">
+                      NekoInn is more than a cat boarding facility; it's a home
+                      away from home for your furry family members. Nestled in
+                      serene surroundings, our inn offers a tranquil retreat for
+                      cats of all shapes, sizes, and personalities. With a team
+                      of dedicated caregivers passionate about feline welfare,
+                      we ensure every guest receives love, attention, and
+                      comfort. Rest easy knowing your cat is in caring hands at
+                      NekoInn.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="rooms_wrapepr_item_left-big span_first">
+                  <div class="rooms_wrapper_item-left_big-img">
+                    <img
+                      src="./Photos/bb_taa.svg"
+                      alt=""
+                      class="romms_wrapper_item-img"
+                    />
+                  </div>
+                  <div class="rooms_wrapper_item_text-box">
+                    <p class="rooms_wrapepr_item-title span_text">
+                      Palatial Purrfections: Opulence for Discerning Cats
+                    </p>
+                  </div>
+                </div>
+
+                <div class="rooms_wrapepr_item_left-big">
+                  <div class="rooms_wrapper_item-left_big-img">
+                    <img
+                      src="./Photos/bb_taa.svg"
+                      alt=""
+                      class="romms_wrapper_item-img"
+                    />
+                  </div>
+                  <div class="rooms_wrapper_item_text-box">
+                    <p class="rooms_wrapepr_item-title span_text">
+                      Tailored Tranquility: Personalized Care for Every Cat
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
