--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           </p>
         </li>
       </ul>
+      <ul class="img__list">
+        <li class="img__item">
+          img.
+        </li>
+      </ul>
     </section>
   </body>
 </html>
