amin added code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,40 @@
       </ul>
       <ul class="img__list">
         <li class="img__item">
-          img.
+          <img src="./assests/Mask group (22).png" alt="" class="radius-img">
+          <div class="radius">
+            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+          </div>
+        </li>
+        <li class="img__item">
+          <img src="./assests/Mask group (23).png" alt="" class="radius-img">
+          <div class="radius">
+            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+          </div>
+        </li>
+        <li class="img__item">
+          <img src="./assests/Mask group (26).png" alt="" class="radius-img">
+          <div class="radius">
+            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+          </div>
+        </li>
+        <li class="img__item">
+          <img src="./assests/Mask group (27).png" alt="" class="radius-img">
+          <div class="radius">
+            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+          </div>
+        </li>
+        <li class="img__item">
+          <img src="./assests/Mask group (28).png" alt="" class="radius-img">
+          <div class="radius">
+            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+          </div>
+        </li>
+        <li class="img__item">
+          <img src="./assests/Mask group (29).png" alt="" class="radius-img">
+          <div class="radius">
+            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+          </div>
         </li>
       </ul>
     </section>
