--- a/index.html
+++ b/index.html
@@ -52,42 +52,311 @@
       </ul>
       <ul class="img__list">
         <li class="img__item">
-          <img src="./assests/Mask group (22).png" alt="" class="radius-img">
+          <img src="./assests/Mask group (22).png" alt="" class="radius-img" />
           <div class="radius">
-            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+            <img
+              src="./assests/PetHouse-Icon (1).svg"
+              alt=""
+              class="radius-icon"
+            />
           </div>
         </li>
         <li class="img__item">
-          <img src="./assests/Mask group (23).png" alt="" class="radius-img">
+          <img src="./assests/Mask group (23).png" alt="" class="radius-img" />
           <div class="radius">
-            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+            <img
+              src="./assests/PetHouse-Icon (1).svg"
+              alt=""
+              class="radius-icon"
+            />
           </div>
         </li>
         <li class="img__item">
-          <img src="./assests/Mask group (26).png" alt="" class="radius-img">
+          <img src="./assests/Mask group (26).png" alt="" class="radius-img" />
           <div class="radius">
-            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+            <img
+              src="./assests/PetHouse-Icon (1).svg"
+              alt=""
+              class="radius-icon"
+            />
           </div>
         </li>
         <li class="img__item">
-          <img src="./assests/Mask group (27).png" alt="" class="radius-img">
+          <img src="./assests/Mask group (27).png" alt="" class="radius-img" />
           <div class="radius">
-            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+            <img
+              src="./assests/PetHouse-Icon (1).svg"
+              alt=""
+              class="radius-icon"
+            />
           </div>
         </li>
         <li class="img__item">
-          <img src="./assests/Mask group (28).png" alt="" class="radius-img">
+          <img src="./assests/Mask group (28).png" alt="" class="radius-img" />
           <div class="radius">
-            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+            <img
+              src="./assests/PetHouse-Icon (1).svg"
+              alt=""
+              class="radius-icon"
+            />
           </div>
         </li>
         <li class="img__item">
-          <img src="./assests/Mask group (29).png" alt="" class="radius-img">
+          <img src="./assests/Mask group (29).png" alt="" class="radius-img" />
           <div class="radius">
-            <img src="./assests/PetHouse-Icon (1).svg" alt="" class="radius-icon">
+            <img
+              src="./assests/PetHouse-Icon (1).svg"
+              alt=""
+              class="radius-icon"
+            />
           </div>
         </li>
       </ul>
     </section>
+    <section>
+      <div class="container">
+        <div class="pricing__wrapper">
+          <div class="pricing__header">
+            <p class="pricing-header-top__text">
+              Transparent Rates for your purry companion
+            </p>
+            <h2 class="pricing-header-title">Pricing</h2>
+            <p class="pricing-header-bottom__text">
+              In our Pricing Section, transparency meets affordability. At
+              NekoInn, we believe in straightforward pricing, ensuring you have
+              peace of mind knowing exactly what to expect.
+            </p>
+          </div>
+          <ul class="pricing__list">
+            <li class="pricing__item">
+              <div class="pricing-item__header">
+                <p class="pricing-item__header-text">Purr Ducal</p>
+                <img src="./assests/Group (1).svg" alt="" class="item__crown" />
+              </div>
+              <div class="pricing-item__price">
+                <p class="pricing-big__price">$160.99</p>
+                <p class="pricing-small__price">PER DAY</p>
+              </div>
+              <ul class="pricing-main__list">
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Standard Room Accommodation</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Basic Grooming</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Group Playtime</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Standard Meal Plan</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Daily Wellness Check</p>
+                </li>
+                <button class="pricing-bottom__btn">BOOK NOW</button>
+              </ul>
+            </li>
+
+            <li class="pricing__item pink">
+              <div class="pricing-item__header pink-header">
+                <p class="pricing-item__header-text pink__text">
+                  Purr imperial
+                </p>
+                <img
+                  src="./assests/royal-crown-of-elegant-vintage-design-svgrepo-com 1.svg"
+                  alt=""
+                  class="item__crown"
+                />
+              </div>
+              <div class="pricing-item__price">
+                <p class="pricing-big__price">$160.99</p>
+                <p class="pricing-small__price">PER DAY</p>
+              </div>
+              <ul class="pricing-main__list">
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Standard Room Accommodation</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Basic Grooming</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Group Playtime</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Standard Meal Plan</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Daily Wellness Check</p>
+                </li>
+                <button class="pricing-bottom__btn pink__btn">BOOK NOW</button>
+              </ul>
+            </li>
+
+            <li class="pricing__item black">
+              <div class="pricing-item__header">
+                <p class="pricing-item__header-text">Purr Ducal</p>
+                <img src="./assests/Group (1).svg" alt="" class="item__crown" />
+              </div>
+              <div class="pricing-item__price">
+                <p class="pricing-big__price">$160.99</p>
+                <p class="pricing-small__price">PER DAY</p>
+              </div>
+              <ul class="pricing-main__list">
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Standard Room Accommodation</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Basic Grooming</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Group Playtime</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Standard Meal Plan</p>
+                </li>
+                <li class="pricing-main-item">
+                  <img
+                    src="./assests/shape.svg"
+                    alt=""
+                    class="pricing-main__icon"
+                  />
+                  <p class="pricing-main__text">Daily Wellness Check</p>
+                </li>
+                <button class="pricing-bottom__btn">BOOK NOW</button>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+   
+    <section>
+        <div class="container">
+          <div class="info__wrapper">
+            <div class="info-top__text">
+              <p class="info-top">Secure Your Cat's Stay Today</p>
+              <h2 class="info__title">Book Now</h2>
+              <p class="info__texts">
+                Ready to reserve your cat's spot at NekoInn? Our easy-to-use
+                booking system makes it simple to schedule your cat's stay with
+                us. Just select your desired dates, choose from our range of
+                accommodations and services, and complete your reservation in a
+                few easy steps.
+              </p>
+            </div>
+            <div class="small-info">
+              <div class="info-small">
+                <p class="info-top-in">Full Name</p>
+                <p class="info-bottom-in">Eg. Jane Doe</p>
+              </div>
+              <div class="info-small">
+                <p class="info-top-in">EMAIL</p>
+                <p class="info-bottom-in">Eg. janedoe@gmail.com</p>
+              </div>
+            </div>
+            <div class="small-info m">
+              <div class="info-small">
+                <p class="info-top-in">PHONE NUMBER</p>
+                <p class="info-bottom-in">100-616-6060</p>
+              </div>
+              <div class="info-small">
+                <p class="info-top-in">CAT NAME</p>
+                <p class="info-bottom-in">Eg. Timothy</p>
+              </div>
+            </div>
+            <div class="big-info">
+              <div class="big-info-texts">
+                <p class="info-top-in">PICK A DATE</p>
+                <p class="info-bottom-in">July 16th, 2024 - 9:26 PM</p>
+              </div>
+              
+            </div>
+            <div class="big-info">
+              <div class="big-info-texts">
+                <p class="info-top-in">How many pets?</p>
+                <p class="info-bottom-in">6</p>
+              </div>
+            </div>
+            <div class="big-info">
+              <div class="big-info-texts">
+                <p class="info-top-in">purr plan</p>
+                <p class="info-bottom-in">Purr Royal</p>
+              </div>
+              
+            </div>
+            <button class="info-btn">BOOK NOW</button>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
